- fixed progress bar bg on dark mode

--- a/styles/dashboard.module.scss
+++ b/styles/dashboard.module.scss
@@ -23,6 +23,6 @@
 
 @include app-theme(light) {
 	.noPreview, .loadingPreview {
-		background-color: $gray-200;
+		background-color: $gray-100;
 	}
 }
